<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * reddit is fun
 *
 * by talklittle
 */
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

	<EditText android:id="@+id/urltext"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="12sp"
	    android:autoText="false"
	    android:capitalize="none"
	    android:text="@string/subreddit_layout_srtext_text" />
	
	<Button android:id="@+id/download"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:text="@string/subreddit_layout_download_text" />
	
	<TextView android:id="@+id/statustext"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:autoText="false"
	    android:capitalize="none"
	    android:textSize="12sp"
	    android:text="@string/subreddit_layout_statustext_text" />

    <ListView android:id="@android:id/list"
    	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
    />

    <ScrollView android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
    >
        <TextView android:id="@+id/emptyText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/noThreads"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorSecondary"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:lineSpacingMultiplier="0.92"
        />
    </ScrollView>
</LinearLayout>
