<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright 2010 Andrew Shu
 *
 * This file is part of "diode".
 *
 * "diode" is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * "diode" is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with "diode".  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/MAIN_MENU">
        <item android:id="@+id/open_browser_menu_id"
            android:title="@string/open_browser"
            android:icon="@drawable/ic_menu_browser"
            />
        <item android:id="@+id/close_browser_menu_id"
            android:title="@string/close_browser"
            android:icon="@drawable/ic_menu_close_clear_cancel"
            />
        <item android:id="@+id/view_comments_menu_id"
            android:title="@string/view_comments"
            android:icon="@drawable/ic_menu_start_conversation"
            />
    </group>
</menu>
 
